--- a/static/style.css
+++ b/static/style.css
@@ -235,6 +235,7 @@ h1 {
     width: 400px;
     padding: 10px;
     margin: 0 auto;
+    }
 }
 
 
@@ -243,6 +244,7 @@ h1 {
     display: grid;
     justify-items: center;
     margin: 0;
+}
 }
 
 /* ======================================================
