profile pics viewable

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,6 +19,7 @@
 <h2>Critter Pages</h2>
 <p><a href="{{ url_for('critter_page', cid=1) }}">Critter Tommy</a></p>
 <p><a href="{{ url_for('critter_page', cid=2) }}">Critter Sam</a></p>
+<p><a href="{{ url_for('critter_page', cid=5) }}">Critter Capy</a></p>
 
 <h2>Upload Forms</h2>
 <p><a href="{{ url_for('critter_upload') }}">Critter Upload</a></p>
