--- a/templates/base.html
+++ b/templates/base.html
@@ -16,40 +16,43 @@
 </head>
 <body>
 
-<div class="main" id="first_main">
-  {% block nav %}
-  <div id="mySidebar" class="sidebar">
-          <a href="javascript:void(0)" class="closebtn" onclick="closeNavall()">&times;</a>
-          <a href="{{url_for('index')}}">Home</a>
-          <a href="{{url_for('about')}}">About</a>
+{% block nav %}
+<!-- Sidebar -->
+<div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNavall()">&times;</a>
+    <a href="{{url_for('index')}}">Home</a>
+    <a href="{{url_for('about')}}">About</a>
+</div>
 
-<div class="topbar">
-    <nav>
-        <ul>
-            <li><a href="{{url_for('index')}}">Home</a></li>
-            <li><a href="{{url_for('about')}}">About</a></li>
-            <li><a href="{{url_for('create')}}">Create</a></li>
-        </ul>
-    </nav>
 
-    <form class="search" method="GET" action="/query/">
-            <label>search:
-                <input type="text" required name="query">
-            </label>
 
-            <label>kind:
-                <select required name="kind">
-                    <option value="user">user</option>
-                    <option value="critter">critter</option>
-                </select>
-            </label>
+<!-- Topbar -->
+<div class="topsection" id="first_main">
+  <div class="topbar">
+      
+      <div>
+          <button class="openbtn" onclick="openNavall()">&#9776; </button>
+      </div>
 
-            <input type="submit" value="search">
-    </form>
+      <form class="search" method="GET" action="/query/">
+          <label>search:
+              <input type="text" required name="query">
+          </label>
+
+          <label>kind:
+              <select required name="kind">
+                  <option value="user">user</option>
+                  <option value="critter">critter</option>
+              </select>
+          </label>
+
+          <input type="submit" value="search">
+      </form>
+  </div>
 </div>
 {% endblock %}
 
-
+<!-- Flash Messages -->
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     <div id="messages">
@@ -60,14 +63,12 @@
   {% endif %}
 {% endwith %}
 
+<!-- Main Content -->
 <div class="main" id="main">
   {% block main_content %}
     <h1>Welcome!</h1>
   {% endblock %}
 </div>
 
-  
-  </div>
-    
 </body>
 </html>
