--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,36 +4,34 @@
 {% extends "base.html" %}
 {% block main_content %}
 
-    {% if user.profilepic %}
-    <img src="{{ url_for('uploaded_file', filename=user.profilepic) }}"
-         alt="Profile Picture"
-         style="width:150px; height:150px; border-radius:50%; object-fit:cover;">
-    {% endif %}
-
-    <h2>Critters:</h2>
-    <article>
-        <ol>
-            {% for critter in critters %}
-            <li><a href="{{ url_for('critter_page', cid=critter.cid) }}">
-                {{ critter.name }}</a></li>
-            {% endfor %}
-        </ol>
-    </article>
+    <div class=".profile-settings-wrapper">
+        <a href="{{ url_for('settings_page', uid=user.uid) }}" class="button-primary profile-settings-button">Settings</a>
+    </div>
 
     <div  id="main" class="main">
 
         <h1>{{ user.name }}</h1>
 
-        <h2>Critters:</h2>
-        <article>
-            <ol>
-                {% for critter in critters %}
-                <li><a href="{{ url_for('critter_page', cid=critter.cid) }}">
-                    {{ critter.name }}</a></li>
-                {% endfor %}
-            </ol>
-        </article>
+        {% if user.profilepic %}
+        <img src="{{ url_for('uploaded_file', filename=user.profilepic) }}"
+            alt="Profile Picture"
+            style="width:150px; height:150px; border-radius:50%; object-fit:cover;">
+        {% endif %}
 
-        <p><a href="{{ url_for('index') }}">Back to Main Page</a></p>
+        <h2>Critters:</h2>
+        <div class="critter-grid">
+            {% for critter in critters %}
+            <a href="{{ url_for('critter_page', cid=critter.cid) }}" class="critter-card">
+                <img src="{{ url_for('uploaded_file', filename=critter.imagepath) }}"
+                    alt="{{ critter.name }}">
+                <p>{{ critter.name }}</p>
+            </a>
+            {% endfor %}
+        </div>
+
+    <a href="{{ url_for('critter_upload', uid=user.uid) }}" class="button-primary">
+    Add another critter!</a>
+
+
     </div>
 {% endblock %}
