--- a/templates/main.html
+++ b/templates/main.html
@@ -17,13 +17,15 @@
 <p><a href="{{ url_for('user_profile', uid=3) }}">Ruth's profile</a></p>
 
 <h2>Critter Pages</h2>
-<p><a href="{{ url_for('critter_page', cid=1) }}">Critter Tommy</a></p>
-<p><a href="{{ url_for('critter_page', cid=2) }}">Critter Sam</a></p>
-<p><a href="{{ url_for('critter_page', cid=5) }}">Critter Capy</a></p>
+<p><a href="{{ url_for('critter_page', cid=13) }}">Critter Betsy Beaver</a></p>
+<p><a href="{{ url_for('critter_page', cid=15) }}">Critter Reginald II</a></p>
+<p><a href="{{ url_for('critter_page', cid=16) }}">Critter Tommy</a></p>
+<p><a href="{{ url_for('critter_page', cid=12) }}">Critter Sam</a></p>
+
 
 <h2>Upload Forms</h2>
 <p><a href="{{ url_for('critter_upload') }}">Critter Upload</a></p>
-<p><a href="{{ url_for('story_upload', cid=2) }}">Story Upload for Critter 2 (Tommy)</a></p>
+<p><a href="{{ url_for('story_upload', cid=16) }}">Story Upload for Critter 16 (Tommy)</a></p>
 
 <h2>Settings</h2>
 <p><a href="{{ url_for('settings_page', uid=1) }}">Settings for User 1 (Nina)</a></p>
