--- a/templates/signin.html
+++ b/templates/signin.html
@@ -14,6 +14,17 @@
 </head>
 
 <body>
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <div id="messages">
+        {% for msg in messages %}
+            <p>*** {{ msg }} ***</p>
+        {% endfor %}
+        </div>
+    {% endif %}
+    {% endwith %}
+    
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="{{url_for('signup')}}">Sign Up</a>
