length checks on story_uoload and critter_upload

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -42,6 +42,9 @@
 
     <a href="{{ url_for('critter_upload', uid=user.uid) }}" class="button-primary">
     Add another critter!</a>
+    <p>Currently this only adds critters for Nina, 
+        but this will be updated in Alpha to add critters for the user
+        saved in the session.</p>
 
 
     </div>
