--- a/templates/user_lookup.html
+++ b/templates/user_lookup.html
@@ -5,10 +5,22 @@
 
 <h1>User results for '{{query}}'</h1>
 
-<ul>
-    {% for u in users %}
-    <li>  <a  href="{{url_for('user_profile', uid=u['uid'])}}">{{u['username']}}</a></li>
-    {% endfor %}
-</ul>
+{% for u in users %}
+
+<div class="search_result">
+    <div class="critter_result">
+        <div>
+            <img src="{{  url_for('uploaded_file', filename=u['profilepic']) }}"
+            alt="Profile Picture" class="critter-profile-img">
+        </div>
+        <div style="padding-left:20px">
+            <h1><a  href="{{url_for('user_profile', uid=u['uid'])}}">{{u['username']}}</a></h1>
+            <p>Join date: {{u['created']}}</p>
+            <p>Number of critters: {{u['num_critters']}}</p>
+        </div>
+    </div>
+</div>
+
+{% endfor %}
 
 {% endblock %}
