--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNavall()">&times;</a>
     <a href="{{url_for('index')}}">Home</a>
     <a href="{{url_for('about')}}">About</a>
+    <a href="{{url_for('logout')}}">Logout</a>
 </div>
 
 
