--- a/templates/critter_upload.html
+++ b/templates/critter_upload.html
@@ -35,7 +35,7 @@
             </p>
         </section>
 
-        <p><input type="submit" value="Upload Your Critter"></p>
+        <p><input type="submit" class="sub_button" value="Upload Your Critter"></p>
     </form>
 
 </div>
