--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,7 +21,7 @@
 
             <div class="critter-info-right">
                 <h1 class="critter-name">{{ user.name }}</h1>
-
+                <h4>@{{ user.username }}</h4>
                 <a href="{{ url_for('critter_upload') }}"
                 class="button-primary write-story-btn">
                 Create a new critter
