Added titles to all html pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,11 @@
 
 {% extends "base.html" %}
 
+{% block head_stuff %}
+<title>"About Page: Contains a description of the website 
+    and the creators."</title>
+{% endblock %}
+
 {% block main_content %}
 
 <h1>About CritterCave</h1>
