--- a/templates/create.html
+++ b/templates/create.html
@@ -1,7 +1,14 @@
 <!-- (CritterCave) -->
 <!-- HTML template for a critter lookup result page -->
-{% extends "base.html" %}      
-{% block main_content %}      
+{% extends "base.html" %}   
+
+{% block head_stuff %}
+<title>"Create Page: Contains embedded website to draw your 
+    critter. Save the photo and use for upload critter."</title>
+{% endblock %}
+
+{% block main_content %}   
+
 <div class="settings">
     <section class="settings-block">
         <h1>Draw your critter!</h1>
