--- a/templates/critter.html
+++ b/templates/critter.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+
+{% block head_stuff %}
+<title>"Critter Page: Displays a critter's information, 
+    including it's photo, name, description, and stories."</title>
+{% endblock %}
+
 {% block main_content %}
 
 <div class="critter-page">
