--- a/templates/main.html
+++ b/templates/main.html
@@ -3,6 +3,11 @@
 
 {% extends "base.html" %}
 
+{% block head_stuff %}
+<title>"Main Page: Displays all critter posts! Displays post 
+    from most to least recent."</title>
+{% endblock %}
+
 {% block main_content %}
 <h1>Main</h1>
 
