--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,6 +2,12 @@
 <!-- HTML template for a user's profile page -->
 
 {% extends "base.html" %}
+
+{% block head_stuff %}
+<title>"Profile Page: Displays a user's information and all 
+    the critters they created."</title>
+{% endblock %}
+
 {% block main_content %}
 
     <div class=".profile-settings-wrapper">
