--- a/templates/settings.html
+++ b/templates/settings.html
@@ -2,6 +2,11 @@
 <!-- HTML template for the settings page -->
 
 {% extends "base.html" %}
+
+{% block head_stuff %}
+<title>"Settings Page: Allows you to update profile preferences."</title>
+{% endblock %}
+
 {% block main_content %}
     <div class="settings">
     <h1>Settings</h1>
