--- a/templates/story_upload.html
+++ b/templates/story_upload.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block head_stuff %}
+<title>"Story Upload: Upload your story for a critter."</title>
+{% endblock %}
+
 {% block main_content %}
 
 <div class="settings">
