--- a/templates/critter_upload.html
+++ b/templates/critter_upload.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+
+{% block head_stuff %}
+<title>"Critter Upload: Upload a photo, name it, and write a 
+    description for your critter."</title>
+{% endblock %}
+
 {% block main_content %}
 
 <div class="settings">
