--- a/templates/signin.html
+++ b/templates/signin.html
@@ -7,7 +7,7 @@
     <!-- for mobile-friendly pages -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name=author content="">
-    <title>{{ page_title }}</title>
+    <title>"Sign-In Page for CritterCave"</title>
     <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 
