--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -8,7 +8,7 @@
     <!-- for mobile-friendly pages -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name=author content="">
-    <title>{{ page_title }}</title>
+    <title>"Welcome Page for CritterCave. Contains links to sign-up or sign-in."</title>
     <link rel='stylesheet' href="{{url_for('static', filename = 'style.css')}}">
 </head>
 <body>
