--- a/templates/signup.html
+++ b/templates/signup.html
@@ -42,7 +42,7 @@
             <h2>Welcome to Critter Cave!</h3>
             <h2>Sign up below.</h3> 
 
-            <form class="sign_up_form" method=POST action="">
+            <form class="sign_up_form" method=POST action="{{ url_for('signup') }}">
                 <table>
                     <tr>
                         <td><label for="name">Name</label></td>
