--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,6 @@
     <a href="{{url_for('logout')}}">Logout</a>
 </div>
 
-
-
 <!-- Topbar -->
 <div class="topsection" id="first_main">
   <div class="topbar">
@@ -33,7 +31,7 @@
           <button class="openbtn" onclick="openNavall()">&#9776; </button>
       </div>
 
-      <form class="search" method="GET" action="/query/">
+      <form class="search" method="GET" action="{{ url_for('lookup_form') }}">
           <label>search:
               <input type="text" required name="query">
           </label>
