--- a/templates/signin.html
+++ b/templates/signin.html
@@ -44,7 +44,7 @@
             <h3>Welcome back to Critter Cave!</h3>
             <h3>Sign in below.</h3>
             
-            <form class="sign_up_form" method=POST action="">
+            <form class="sign_up_form" method=POST action="{{ url_for('signin') }}">
                 <table>
                     <tr>
                         <td><label for="username">Username</label></td>
