--- a/templates/story_upload.html
+++ b/templates/story_upload.html
@@ -36,7 +36,7 @@
     <p></p>
 
     <!-- Story Writing -->
-    <form method="post" action="">
+    <form method="post" action="{{ url_for('story_upload', cid=critter_info.cid) }}">
         <section class="settings-block">
             <h2>Story Details</h2>
             <p class="block-subtitle">Craft a tale worthy of your critter.</p>
