WIP: critter delete page (not ready)

--- a/templates/critter.html
+++ b/templates/critter.html
@@ -73,6 +73,11 @@
         </div>
 
     </section>
+
+    <form action="{{ url_for('delete_critter', cid=critter_info.cid) }}" method="get">
+        <button class="button-primary">Delete Critter</button>
+    </form>
+
 </div>
 
 {% endblock %}
