fixed sign in css

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -55,7 +55,8 @@
                         <td><input type="password" id="password" name='password' value=""></td>
                     </tr>
                 </table>
-                <input type="submit" name="submit" value="Sign in">
+             
+                <input type="submit" name="submit" value="Sign in" class="submit_button">
             </form>
             <p>Test Account:</p>
             <p>username = 'test'</p>
