--- a/static/style.css
+++ b/static/style.css
@@ -220,7 +220,7 @@ h1 {
    LOGIN CONTAINER
 ====================================================== */
 
-#log_container {
+.log_container {
     text-align: center;
     background: var(--panel);
     border: 2px solid var(--border-subtle);
@@ -228,6 +228,20 @@ h1 {
     width: 400px;
     padding: 10px;
     margin: 0 auto;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+
+    background: var(--panel);
+    border: 2px solid var(--border-subtle);
+    border-radius: 12px;
+
+    padding: 16px;
+    box-shadow: 0px 2px 6px rgba(0,0,0,0.12);
+    transition: transform 0.15s ease, box-shadow 0.15s ease,
+                border-color 0.15s ease;
 }
 
 #sign_up_form {
@@ -236,15 +250,17 @@ h1 {
     margin: 0;
 }
 
+
+
 /* ======================================================
    FORM INPUTS
 ====================================================== */
 
-#sign_up_form input[type="text"],
-#sign_up_form input[type="username"],
-#sign_up_form input[type="password"],
-#sign_up_form input[type="name"],
-#sign_up_form select {
+.sign_up_form input[type="text"],
+.sign_up_form input[type="username"],
+.sign_up_form input[type="password"],
+.sign_up_form input[type="name"],
+.sign_up_form select {
     width: 100%;
     max-width: calc(100% - 20px);
     padding: 14px 18px;
@@ -258,7 +274,7 @@ h1 {
     transition: border-color 0.2s, background 0.2s;
 }
 
-#sign_up_form input[type="submit"],
+.sign_up_form input[type="submit"],
 form > p > input[type="submit"] {
     background: #5F274F;;
     color: white;
@@ -270,12 +286,12 @@ form > p > input[type="submit"] {
     transition: background 0.15s;
 }
 
-#sign_up_form input[type="submit"]:hover,
+.sign_up_form input[type="submit"]:hover,
 form > p > input[type="submit"]:hover {
     background: var(--rosewood);
 }
 
-#sign_up_form form p {
+.sign_up_form form p {
     margin: 0;
 }
 
