add clickable username to stories

--- a/templates/profile_for_none_user.html
+++ b/templates/profile_for_none_user.html
@@ -18,6 +18,7 @@
 
             <div class="critter-info-right">
                 <h1 class="critter-name">{{ user.name }}</h1>
+                <h4>@{{ user.username }}</h4>
             </div>
         </section>
 
