--- a/templates/critter.html
+++ b/templates/critter.html
@@ -68,6 +68,7 @@
                 {% for story in stories_not_by_user %}
                     <div class="story-card pastel-box">
                         <p>{{ story.critter_story }}</p>
+                        <a href="{{url_for('user_profile', uid=story.uid)}}">{{story['creator']}}</a>
                     </div>
                 {% else %}
                     <a href="{{ url_for('story_upload', cid=critter_info.cid) }}"
