--- a/templates/profile_for_none_user.html
+++ b/templates/profile_for_none_user.html
@@ -19,6 +19,7 @@
             <div class="critter-info-right">
                 <h1 class="critter-name">{{ user.name }}</h1>
                 <h4>@{{ user.username }}</h4>
+                <h4>{{ user.created }}</h4>
             </div>
         </section>
 
