Updating welcome pages

--- a/templates/main.html
+++ b/templates/main.html
@@ -13,4 +13,6 @@
 <p>Welcome to CritterCave!!!!</p>
 <p><a href="{{ url_for('old_main') }}">(Link to the main page used during draft)</a></p>
 
+{% for critter in critters %}
+
 {% endblock %}
