--- a/templates/story.html
+++ b/templates/story.html
@@ -42,6 +42,7 @@
 
     <!-- Show delete button only if the logged-in user is the author of the story -->
     {% if session.get('uid') == story_info.uid %}
+    <button class="button-primary">Edit Story</button>
     <form action="{{ url_for('delete_story', sid=story_info.sid) }}" method="get">
         <button class="button-primary">Delete Story</button>
     </form>
