edit story complete

--- a/templates/edit_story.html
+++ b/templates/edit_story.html
@@ -44,10 +44,9 @@
             <p>
                 <label for="critter-story"><strong>Your story begins here:</strong></label><br>
                 <textarea id="critter-story" name="critter-story" rows="5" cols="50"
-                    placeholder="{{ story_info.story }}"></textarea>
+                >{{ story_info.story }}</textarea>
             </p>
         </section>
-
         <p><input type="submit" value="Save Your Updated Story"></p>
     </form>
 
