--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
 
 {% block main_content %}
 
-    <div class=".profile-settings-wrapper">
+    <div class="profile-settings-wrapper">
         <a href="{{ url_for('settings_page', uid=user.uid) }}" class="button-primary profile-settings-button">Settings</a>
     </div>
 
@@ -39,20 +39,33 @@
         <h2>Critters:</h2>
         <div class="critter-grid">
             {% for critter in critters %}
-            <a href="{{ url_for('critter_page', cid=critter.cid) }}" class="critter-card">
-                <img src="{{ url_for('uploaded_file', filename=critter.imagepath) }}"
-                    alt="{{ critter.name }}">
-                <p>{{ critter.name }}</p>
-            </a>
+                <a href="{{ url_for('critter_page', cid=critter['cid']) }}" class="critter-card">
+                    <img src="{{ url_for('uploaded_file', filename=critter['imagepath']) }}"
+                        alt="{{ critter['name'] }}">
+                    <p>{{ critter['name'] }}</p>
+                </a>
+            {% else %}
+                <p>{{ user.name }} hasn't uploaded any critters.</p>
             {% endfor %}
         </div>
 
     <a href="{{ url_for('critter_upload', uid=user.uid) }}" class="button-primary">
     Add another critter!</a>
-    <p>Currently this only adds critters for Nina, 
-        but this will be updated in Alpha to add critters for the user
-        saved in the session.</p>
-
-
     </div>
+
+    <h2>Stories:</h2>
+        <section class="stories-section">
+        <div class="story-group">
+            <div class="story-card-grid">
+                {% for story in stories %}
+                    <a href="{{ url_for('story_page', sid=story.sid, cid=story.critter_info.cid) }}" class="story-card pastel-box story-card-link">
+                        <p>{{ story.critter_story }}</p>
+                        <span class="story-author-tag">For {{ story.critter_info.name }}</span>
+                    </a>
+                {% else %}
+                    <p>{{ user.name }} hasn't written any stories.</p>
+                {% endfor %}
+            </div>
+        </div>
+        </section>
 {% endblock %}
