--- a/templates/critter.html
+++ b/templates/critter.html
@@ -47,7 +47,7 @@
 
         <div class="story-group">
             <h3 class="story-group-title">
-                Stories by {{ user.name }} (creator)
+                Stories by {{ user.username }} (creator)
             </h3>
 
             <div class="story-card-grid">
