Updated main page

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
 <section class="main-header">
     <h1>CritterCave</h1>
     <p>A cozy home for cataloging creatures big and small</p>
-    <a href="{{ url_for('old_main') }}" class="old"> View Previous Version</a>
+    <a href="{{ url_for('old_main') }}" class="old"> View Draft Main Page</a>
 </section>
 
 {% for critter in critters %}
