favi takes to home page

--- a/static/style.css
+++ b/static/style.css
@@ -870,3 +870,9 @@ a:hover {
     grid-template-columns: 1fr;
   }
 }
+
+.favi {
+    display: inline-block;
+    vertical-align:middle; /* or top */
+    line-height: 0; /* optional but solves some cases */
+}
