--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
       
       <div>
           <button class="openbtn" onclick="openNavall()">&#9776; </button>
+          <a href=" {{ url_for('index') }} "><img src="../static/favi.png" alt="favi" class="favi"></a>
       </div>
 
       <form class="search" method="GET" action="{{ url_for('lookup_form') }}">
