fix profile pic reupload?

--- a/static/style.css
+++ b/static/style.css
@@ -873,6 +873,6 @@ a:hover {
 
 .favi {
     display: inline-block;
-    vertical-align:middle; /* or top */
-    line-height: 0; /* optional but solves some cases */
+    vertical-align:middle;
+    line-height: 0;
 }
